...
          <TouchableOpacity
            style={styles.emailBtn}
            activeOpacity={0.85}
            onPress={() => router.push("/(auth)/Login")}
          >
            <Text style={[styles.btnText, { color: "#fff" }]}>
              이메일로 로그인
            </Text>
          </TouchableOpacity>

          <View style={styles.signupRow}>
            <Text style={styles.signupLabel}>아직 계정이 없다면?</Text>
            <TouchableOpacity
...
